Small correction for chip-list input spacing issue

--- a/projects/novo-elements/src/elements/chips/ChipList.scss
+++ b/projects/novo-elements/src/elements/chips/ChipList.scss
@@ -45,6 +45,6 @@ novo-field.novo-focused {
 
 input.novo-chip-input {
   width: 20px;
-  margin: $novo-chip-input-margin;
+  margin: 0 $novo-chip-input-margin;
   flex: 1 0 20px;
 }
